# message-mind

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/message_mind/: __init__.py  utils.py
src/message_mind/database_management/: __init__.py  database_manager.py  main.py  message_manager.py
src/message_mind/workflow/: graph.py  main.py  nodes.py  prompts.py  state.py  tools.py
